Bug 75660 - u_inlines.h:277:pipe_buffer_map_range: Assertion `length' failed.
Summary: u_inlines.h:277:pipe_buffer_map_range: Assertion `length' failed.
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: have-backtrace
Depends on:
Blocks:
 
Reported: 2014-03-02 04:27 UTC by Vinson Lee
Modified: 2014-03-03 18:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-03-02 04:27:36 UTC
mesa: fc25956badb8e1932cc19d8c97b4be16e92dfc65 (master 10.2.0-devel)

piglit arb_clear_buffer_object-zero-size triggers an assert with softpipe and llvmpipe.


$ ./bin/arb_clear_buffer_object-zero-size -auto
../../src/gallium/auxiliary/util/u_inlines.h:277:pipe_buffer_map_range: Assertion `length' failed.
Trace/breakpoint trap (core dumped)

(gdb) bt
#0  0x00007f09421b2a1b in _debug_assert_fail (expr=0x7f09422eca62 "length", 
    file=0x7f09422ec9c0 "../../src/gallium/auxiliary/util/u_inlines.h", line=277, 
    function=0x7f09422eccc0 <__func__.32774> "pipe_buffer_map_range") at util/u_debug.c:278
#1  0x00007f0941ffefdb in pipe_buffer_map_range (pipe=0xb4fd10, buffer=0xc7b9a0, offset=0, length=0, 
    access=258, transfer=0xb4f8b8) at ../../src/gallium/auxiliary/util/u_inlines.h:277
#2  0x00007f0941fffaff in st_bufferobj_map_range (ctx=0x7f09472ab010, offset=0, length=0, access=6, 
    obj=0xb4f810, index=MAP_INTERNAL) at state_tracker/st_cb_bufferobjects.c:359
#3  0x00007f0941e6968d in _mesa_buffer_clear_subdata (ctx=0x7f09472ab010, offset=0, size=0, 
    clearValue=0x7fff8da95d80, clearValueSize=4, bufObj=0xb4f810) at main/bufferobj.c:679
#4  0x00007f0941e6b27e in _mesa_ClearBufferSubData (target=34962, internalformat=32856, offset=0, size=0, 
    format=6408, type=5121, data=0x401441) at main/bufferobj.c:1522
#5  0x00007f0946dc56f1 in stub_glClearBufferSubData (target=34962, internalformat=32856, offset=0, size=0, 
    format=6408, type=5121, data=0x401441) at piglit/tests/util/generated_dispatch.c:2020
#6  0x0000000000400fc7 in piglit_init (argc=1, argv=0x7fff8da95fe8)
    at piglit/tests/spec/arb_clear_buffer_object/zero-size.c:73
#7  0x00007f0946dc0a1a in run_test (gl_fw=0x7f09470af360 <glut_fw>, argc=1, argv=0x7fff8da95fe8)
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:140
#8  0x00007f0946dbe7e9 in piglit_gl_test_run (argc=1, argv=0x7fff8da95fe8, config=0x7fff8da95eb0)
    at piglit/tests/util/piglit-framework-gl.c:191
#9  0x0000000000400f00 in main (argc=1, argv=0x7fff8da95fe8)
    at piglit/tests/spec/arb_clear_buffer_object/zero-size.c:38
(gdb) frame 1
#1  0x00007f0941ffefdb in pipe_buffer_map_range (pipe=0xb4fd10, buffer=0xc7b9a0, offset=0, length=0, 
    access=258, transfer=0xb4f8b8) at ../../src/gallium/auxiliary/util/u_inlines.h:277
277	   assert(length);
(gdb) print length
$1 = 0
Comment 1 Brian Paul 2014-03-03 18:21:13 UTC
Fixed with aff7c5e78ab133866a90f67613508735c9b75094


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.